IMPALA-9761: Fix GCC7 ambiguous else warning for gtest macros

On GCC7, a dangling-else warning is firing for code like:

if (cond1) ASSERT_TRUE(cond2)

This is true for several ASSERT_* and EXPECT_* gtest macros.
gtest had some code to avoid warnings for code of this form,
but that code is no longer effective. gtest now disables
the dangling-else warning. Since this is just a matter of
adding braces, this adds braces for all those locations.
For consistency, this may include locations that were not
failing. I found locations by doing:
git grep EXPECT_ | grep if
git grep ASSERT_ | grep if
and manually looking through the output.

Testing:
 - Builds successfully

Change-Id: Ieb664afe83736a71508302575e8e66a1b506c985
Reviewed-on: http://gerrit.cloudera.org:8080/15964
Reviewed-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>